--- a/estilo.css
+++ b/estilo.css
@@ -31,3 +31,12 @@
 	background-color: rgb(20, 100, 300);
 	box-shadow: 20px 5px  50px;
 }
+
+
+#cobro{
+
+	background-color:#58FAD0;
+	text-align: center;
+	font-size: 30px;
+	display: none;
+}
