--- a/estilo.css
+++ b/estilo.css
@@ -48,3 +48,11 @@
 	color: white;
 	font-style: oblique;
 }
+
+/*#usuario{
+	background-position: center;
+	background-color: #F05331;
+	border-style: dashed;
+	border-color: red;
+
+}*/
