--- a/estilo.css
+++ b/estilo.css
@@ -56,3 +56,10 @@
 	border-color: red;
 
 }*/
+
+.claseP{
+	color: red; /*rgb(0, 0,0);*/
+	margin-top: 60px;
+	text-align: center;
+	font-size: 20px;	
+}
