--- a/estilo.css
+++ b/estilo.css
@@ -63,3 +63,23 @@
 	text-align: center;
 	font-size: 20px;	
 }
+
+#deslogin{
+
+	vertical-align: text-bottom;
+	border-style: hidden;
+	padding-right: 50px;
+	padding-left: 50px;
+}
+
+#usuario{
+
+}
+
+footer{
+
+	position: absolute;
+	padding-left: 1050px;
+	vertical-align: bottom;
+
+}
