Actualizacion de rutas

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,6 @@
 #principal{
 
-	background-image: url('Estacionamientos.jpg');
+	background-image: url('../fotos/Estacionamientos.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
